<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/nav_tool"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/setting_encrypt_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/down_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Download"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/encrypt_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Encrypt Toggle"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rotate_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="Rotate"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Null_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:visibility="gone" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/speed"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/setting_speed_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/speedUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/speedNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/speedDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="0.5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/speedNull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:visibility="gone" />
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/scale"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/setting_ratio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <RadioButton
            android:id="@+id/scale_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="true"
            android:text="Default"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/scale_16_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="16/9"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/scale_4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="4/3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/scale_match_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="match"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/scale_center_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="crop"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/scale_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="original"
            android:textSize="20sp" />


    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/engine"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/setting_player_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/exoplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Exoplayer"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/mediaplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="System"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/vlcplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="IJK Player"
            android:textSize="20sp" />
    </RadioGroup>

</LinearLayout>
