<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:overScrollMode="never"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/transparent"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Casting"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/setting_cast_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Cast_No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="No"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Cast_Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:checked="false"
                android:text="Yes"
                android:textSize="20sp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/transparent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/onlineCache"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/setting_cache_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cache_No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="No"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/cache_Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:checked="false"
                android:text="Yes"
                android:textSize="20sp" />

        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/transparent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pipExit"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/setting_pip_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pip_No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="No"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/pip_Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:checked="false"
                android:text="Yes"
                android:textSize="20sp" />

        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:weightSum="3"
        android:backgroundTint="@color/transparent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/videoEnd"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/setting_video_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/tocontinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="left"
                android:text="@string/cycle"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="left"
                android:text="@string/repeat"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/endOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/endOut"
                android:layout_gravity="left"
                android:textSize="20sp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/renders"
            android:layout_weight="1"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/setting_render_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/texture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_gravity="left"
                android:text="Texture"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Surface"
                android:layout_gravity="left"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/glsurface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="left"
                android:text="GLSurface"
                android:textSize="20sp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/engine"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/setting_player_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/exoplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Exoplayer"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/mediaplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="System Player"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/ijkplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Ijk Player"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/vlcplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="VLC Player"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/encryptCode"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/defaultPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:padding="5dp">

        <EditText
            android:id="@+id/encryptCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@+id/ec_confirm"
            android:text=""
            android:hint="NY0 16 digits code" />

        <Button
            android:id="@+id/ec_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/transparent"
            android:text="Set" />

    </RelativeLayout>


    <RadioGroup
        android:id="@+id/setting_encrypt_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10pt"
        android:visibility="gone"
        android:orientation="horizontal"
        android:weightSum="6">



        <RadioButton
            android:id="@+id/grade1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="true"
            android:text="1" />

        <RadioButton
            android:id="@+id/grade2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:enabled="true"
            android:text="2" />

        <RadioButton
            android:id="@+id/grade3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:enabled="true"
            android:text="3" />

        <RadioButton
            android:id="@+id/grade4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:enabled="true"
            android:text="4" />

        <RadioButton
            android:id="@+id/grade5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:enabled="true"
            android:text="5" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:visibility="gone"
        android:padding="5dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@+id/input_confirm"
            android:hint="Verification Code" />

        <Button
            android:id="@+id/input_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Enter" />

    </RelativeLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
